# SnapVim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  resources.rc  runtime_config.h  snapvim.cpp  snapvim.h  svimconfig.h  svimconfig_ini.h
docs/superpowers/specs/: 2026-07-01-rust-migration-design.md
imgui/: imgui_widgets.cpp
res/: resources.h  resources.rc
